--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
     --offWhite: #ababab;
     --brandFontColorRev: #42070A;
     --brandFont: 'Inter';
-    --maxWidth: 1200px;
+    --maxWidth: 1440px;
     --white: #efefef;
 
     /* this site for conversion https://convertio.co */
@@ -416,6 +416,11 @@ body {
 
 select {
     color: #8e8e8e;
+    -webkit-appearance: none;
+}
+
+select:focus-visible {
+    outline: none;
 }
 
 input:focus, textarea:focus {
@@ -440,12 +445,16 @@ input:focus, textarea:focus {
 }
 
 .contact-info {
-    display: grid;
+    /*display: grid;*/
     column-gap: 1rem;
-    grid-template-columns: repeat(2, 1fr);
+    /*grid-template-columns: repeat(2, 1fr);*/
     row-gap: 1rem;
-    text-align: center;
+    /*text-align: center;*/
     margin: 1rem 0;
+}
+
+.contact-info p {
+    padding: 0 0 1rem 0;
 }
 
 .contact-info address {
