--- a/app/globals.css
+++ b/app/globals.css
@@ -58,13 +58,13 @@ body {
 
 .carousel-container {
     margin: 2rem 0;
-    max-height: 640px;
+    max-height: 1024px;
 }
 
 .carousel-image {
     overflow: hidden;
-    max-height: 640px;
-    max-width: 480px;
+    max-height: 1024px;
+    max-width: 960px;
 }
 
 .carousel-image img {
@@ -300,7 +300,8 @@ body {
 }
 
 .review-box {
-    border: 1px solid gray;
+    border: 1px solid var(--brandFontColorRev);
+    box-shadow: 3px 3px 0 var(--brandFontColorRev);
     border-radius: 10px;
     padding: 1rem;
     margin-top: 1rem;
@@ -455,6 +456,12 @@ input:focus, textarea:focus {
 
 .contact-info p {
     padding: 0 0 1rem 0;
+}
+
+.contact-info a {
+    padding: 0 0 1rem 0;
+    color: var(--brandFontColorRev);
+    text-decoration: none;
 }
 
 .contact-info address {
@@ -664,6 +671,17 @@ footer {
 
 @media screen and (min-width: 651px) {
 
+    .carousel-container {
+        margin: 2rem 0;
+        max-height: 640px;
+    }
+
+    .carousel-image {
+        overflow: hidden;
+        max-height: 1024px;
+        max-width: 480px;
+    }
+
     .block {
         display: block;
         margin: 0.375rem 0;
@@ -724,8 +742,6 @@ footer {
     }
 
     /*    form */
-
-
     .form-container input[name="business"], .form-button, .form-container textarea {
         grid-column: 1/3;
     }
@@ -834,7 +850,6 @@ footer {
     }
 
     /*    footer */
-
     .footer-top {
         grid-template-columns: repeat(4, 1.2fr);
     }
