--- a/components/Authors/index.module.scss
+++ b/components/Authors/index.module.scss
@@ -1,12 +1,12 @@
 .container {
   display: flex;
   flex-wrap: wrap;
+  border-top: 1px solid var(--brandFontColorRev);
+  padding-top: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.375rem;
   p, span {
     margin-right: 0.175rem;
     margin-top: 0;
   }
-}
-
-.names {
-
 }
