--- a/components/ContentWithMedia/index.module.scss
+++ b/components/ContentWithMedia/index.module.scss
@@ -13,6 +13,7 @@
   max-width: 100%;
   padding: 0.875rem;
   justify-content: center;
+  align-items: center;
 }
 
 .imgContainer {
@@ -58,7 +59,7 @@
 }
 
 .text {
-  font-size: 1.1rem;
+  //font-size: 1.1rem;
 }
 
 .reverseRow {
@@ -141,7 +142,7 @@
     width: 100%;
     max-width: 100%;
     padding: 0.875rem;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
   }
 
